fixed footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -332,9 +332,9 @@ footer {
         bottom: 0;
         width: 100%;
         height: 60px;
+        line-height: 60px;
         text-align: center;
         margin-left: 0;
-        padding: 15px;
         background-color: #f5f5f5;
     }
 }
